# NLP_examples

./: .gitignore  pyproject.toml  test.py
src/WebUI/: gradio.ipynb
src/llm/RAG/: QA-in-RAG-LlamaIndex.ipynb  llamaindex-quickstart.ipynb
src/llm/RAG/Contextual RAG/: Azure_AI_faiss.ipynb
src/llm/RAG/Crayon RAY/: RAG Chatbot annotated.ipynb  RAG Chatbot with Streamlit.ipynb  basic_RAG.ipynb
src/llm/openai_api/: assistant_api.ipynb
src/llm/openai_api/Assistant API/: Assistant_quickstart.ipynb  assistant_create_file_search.ipynb  assistant_second_call.ipynb
src/llm/openai_api/Chat API/: chat_api.ipynb  chat_gradio.ipynb
src/llm/openai_api/Finetune API/: Fine-tune Guidance.ipynb  Finetune-quickstart.ipynb  encoded_test_data.jsonl  encoded_train_data.jsonl  finetune_with_W_B.ipynb  finetune_with_multitune.ipynb
src/llm/openai_api/Finetune API/wandb/: latest-run
src/llm/openai_api/api_with_gradio/: chat_gradio.ipynb
src/nlp_basic/Bert/: Bert_for_Tweet_Disaster_Classficatio_simplfied.ipynb
src/nlp_basic/Bert/Bert_for_Named_Entity_Recognition/: Bert_for_NER.ipynb
src/nlp_basic/Bert/Bert_for_Text_Classfication/: Bert_for_Tweet_Disaster_Classficatio_simplfied.ipynb  Bert_for_Tweet_Disaster_Classfication.ipynb
src/nlp_basic/Bert/Bert_for_Text_Classfication/dataset/: test.csv  train.csv
src/nlp_basic/Bert/Bert_for_Text_Classfication/model/: config.json
src/nlp_basic/Bert/Bert_for_Text_Classfication/src/: BERT-Disaster-Tweets-Prediction.ipynb  test.py  util.py  (+1 more)
src/transformer/: transformer.ipynb
src/voice_clone/code/: custom_voice.ipynb  personal_voice_sample.py  professional_voice_sample.py
src/voice_clone/data/: template-voice-transcript.txt
(+25 files in other folders)
