[tool.poetry]
name = "nlp-examples"
version = "0.1.0"
description = ""
authors = ["Tianyu Liu <tyliu1122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.1.0"
ipykernel = "^6.29.5"
openai = "^1.51.2"
wandb = "^0.18.5"
tiktoken = "^0.8.0"
tenacity = "~8.3"
datasets = "^3.0.1"
llama-index = "^0.11.18"
ollama = "^0.3.3"
llama-index-embeddings-huggingface-optimum = "^0.2.0"
chromadb = "^0.5.16"
llama-index-vector-stores-chroma = "^0.2.1"
tensorflow = "^2.18.0"
emoji = "^2.14.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
